--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 Django~=1.11.4
+psycopg2~=2.7.3
 whitenoise~=3.3.0
 gunicorn~=19.7.1
+celery[redis]~=4.1.0
+django-celery-results~=1.0.1
+django-celery-beat~=1.0.1
